<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.example</groupId>
    <artifactId>document_flow</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>document_flow</name>
    <packaging>jar</packaging>

    <properties>
        <java.version>16</java.version>
        <slf4j.version>1.7.32</slf4j.version>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <mokiti.version>4.0.0</mokiti.version>
        <junit.version>5.8.1</junit.version>
        <gson.version>2.8.9</gson.version>
        <jaxb-runtime.version>2.3.1</jaxb-runtime.version>
        <javaee-api.version>7.0</javaee-api.version>
        <jersey-container-servlet>2.25.1</jersey-container-servlet>
        <jersey-media-json-jackson>2.27</jersey-media-json-jackson>
        <derby.version>10.13.1.1</derby.version>
        <maven.war.plugin>3.2.0</maven.war.plugin>
        <cargo-maven2-plugin.version>1.7.6</cargo-maven2-plugin.version>
        <tomcat.version>8.0.48</tomcat.version>
        <hikariCP.version>3.3.1</hikariCP.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mokiti.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>${jaxb-runtime.version}</version>
        </dependency>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <version>${javaee-api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.containers</groupId>
            <artifactId>jersey-container-servlet</artifactId>
            <version>${jersey-container-servlet}</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-json-jackson</artifactId>
            <version>${jersey-media-json-jackson}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derby</artifactId>
            <version>${derby.version}</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>${hikariCP.version}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>${maven.war.plugin}</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                    <archive>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>com.example.document_flow.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
            <!--            <plugin>-->
            <!--                <groupId>org.codehaus.cargo</groupId>-->
            <!--                <artifactId>cargo-maven2-plugin</artifactId>-->
            <!--                <version>${cargo-maven2-plugin.version}</version>-->
            <!--                <configuration>-->
            <!--                    <container>-->
            <!--                        <containerId>tomcat9x</containerId>-->
            <!--                        <type>embedded</type>-->
            <!--                    </container>-->
            <!--                    <configuration>-->
            <!--                        <properties>-->
            <!--                            <cargo.servlet.uriencoding>UTF-8</cargo.servlet.uriencoding>-->
            <!--                            <cargo.servlet.port>8080</cargo.servlet.port>-->
            <!--                            <cargo.tomcat.manager.url>http://localhost:8080</cargo.tomcat.manager.url>-->
            <!--                        </properties>-->
            <!--                    </configuration>-->
            <!--                    <deployables>-->
            <!--                        <deployable>-->
            <!--                            <groupId>com.example</groupId>-->
            <!--                            <artifactId>document_flow</artifactId>-->
            <!--                            <type>war</type>-->
            <!--                            <properties>-->
            <!--                                <context>/</context>-->
            <!--                            </properties>-->
            <!--                        </deployable>-->
            <!--                    </deployables>-->
            <!--                </configuration>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <phase>package</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>run</goal>-->
            <!--                        </goals>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
    </build>
</project>